# HeyMa-Satellite

./: .copier-answers.yml  .gitignore  .gitmodules  .plane.json  AGENTS.md  CLAUDE.md  chip-failure.md  find_enable_pin.sh  mise.toml  rec.py
.scripts/: project-data.json
_bmad/: config.yaml
_bmad-output/implementation-artifacts/: deferred-work.md  review-diff.md  tech-spec-d4-wake.md  tech-spec-wip.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/lite/: config.yaml
bmalph/: config.json
docs/: wire-contract.md
hey_tonny_training/: TRAINING_GUIDE.txt  record_samples.sh
heyma-satellite/: Cargo.toml  Cross.toml
heyma-satellite/src/: audio.rs  config.rs  gateway.rs  main.rs  utterance.rs  wake.rs
heyma-satellite/tests/: config.rs  gateway.rs  smoke.rs  utterance.rs  wake.rs
satellite/scripts/: decommission-wyoming.sh  deploy.sh
satellite/systemd/: heyma.service
